samples/_failures_safe/1761720057_37d192_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a64b4e02.c: In function ‘main’:
./samples/SAFE/__tmp_a64b4e02.c:176:21: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  176 |         free_matrix(mat
      |                     ^~~
      |                     mat2
./samples/SAFE/__tmp_a64b4e02.c:176:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a64b4e02.c:176:24: error: expected ‘)’ at end of input
  176 |         free_matrix(mat
      |                    ~   ^
      |                        )
./samples/SAFE/__tmp_a64b4e02.c:176:9: error: expected declaration or statement at end of input
  176 |         free_matrix(mat
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_a64b4e02.c:176:9: error: expected declaration or statement at end of input
